--- a/templates/base.html
+++ b/templates/base.html
@@ -152,7 +152,7 @@
   </header>
 
   <div class="container mt-4 mb-5">
-    {% block content %}{% endblock %}
+    {% block content %}
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -172,6 +172,6 @@
     });
   </script>
 
-  {% block scripts %}{% endblock %}
+  {% endblock %}
 </body>
 </html>
