--- a/templates/complete.html
+++ b/templates/complete.html
@@ -22,15 +22,16 @@
         </div>
 
         <div class="d-flex justify-content-center gap-3 flex-wrap">
-          <button id="btnReport" type="submit" class="btn btn-purple fw-bold px-4">
+          <button id="btnReport" type="submit" class="btn btn-purple fw-bold px-4" disabled>
             📄 Generate PDF Report
           </button>
-          <a href="{{ url_for('dashboard') }}" class="btn btn-outline-secondary fw-bold px-4">
+          <a id="homeButton" href="{{ url_for('dashboard') }}" class="btn btn-outline-secondary fw-bold px-4 disabled"
+             aria-disabled="true" tabindex="-1">
             🔙 Home Page
           </a>
         </div>
 
-        <div id="statusMsg" class="mt-4 text-success fw-semibold"></div>
+        <div id="statusMsg" class="mt-4 fw-semibold" role="alert"></div>
       </form>
     </div>
   </div>
@@ -93,7 +94,3 @@
   });
 </script>
 {% endblock %}
-
-
-
-
